# ProyectoSO

./: .gitignore  CHECKLIST_EVALUACION.md  GUIA_INTERFAZ_GRAFICA.md  Guia paso a paso para correr proyecto.md  INDEX.md  INICIO.md  INTERFAZ_SIMULADOR.html  Informe.tex  Informe_largo.tex  PRESENTACION_PROYECTO.html  README.md  RESUMEN_PROYECTO_COMPLETO.md
cpp_os_simulator/: .gitignore  CMakeLists.txt  README.md
cpp_os_simulator/src/adapters/inbound/cli/: files_cli.cpp  kernel_runner.cpp  main.cpp  memory_cli.cpp
cpp_os_simulator/src/adapters/outbound/devices/: device_sim.cpp  device_sim.h
cpp_os_simulator/src/adapters/outbound/fs/: in_memory_filesystem.cpp  in_memory_filesystem.h
cpp_os_simulator/src/adapters/outbound/memory/: first_fit_memory.cpp  first_fit_memory.h
cpp_os_simulator/src/adapters/outbound/schedulers/: fifo_scheduler.cpp  fifo_scheduler.h  rr_scheduler.cpp  rr_scheduler.h
cpp_os_simulator/src/application/use_cases/: integration_scenario.cpp  integration_scenario.h  manage_files.cpp  manage_files.h  manage_memory.cpp  manage_memory.h  run_scheduler.cpp  run_scheduler.h
cpp_os_simulator/src/domain/entities/: pcb.cpp  pcb.h
cpp_os_simulator/src/domain/entities/fs/: fcb.h
cpp_os_simulator/src/domain/entities/kernel/: minikernel.h
cpp_os_simulator/src/domain/entities/memory/: block.h
cpp_os_simulator/src/domain/ports/: scheduler_port.h
cpp_os_simulator/src/domain/ports/fs/: filesystem_port.h
cpp_os_simulator/src/domain/ports/io/: io_port.h
cpp_os_simulator/src/domain/ports/memory/: memory_port.h
cpp_os_simulator/tests/: README.md
cpp_os_simulator/tests/adapters/: test_first_fit_memory.cpp  test_in_memory_filesystem.cpp  test_schedulers.cpp
cpp_os_simulator/tests/application/: test_integration_scenarios.cpp
cpp_os_simulator/tests/domain/: test_pcb.cpp
docs/: DOCUMENTO_TECNICO.md  EVALUACION_RUBRICA.md  architecture.md
